# artchrono

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: check-reminders.yml  ci.yml  regen-scheduled-classes.yml  sync-holidays.yml  test-e2e.yml
docs/: design.md
docs/branding/: 艺时纪.md
docs/superpowers/plans/: 2026-07-11-shadcn-migration.md  2026-07-13-i18n-refactor.md
docs/superpowers/specs/: 2026-07-13-i18n-refactor-design.md
e2e/: app.spec.ts  i18n.spec.ts
public/locales/en/: translation.json
public/locales/zh-CN/: translation.json
scripts/: check-reminders.mjs  regenerate-all-enrollments.mjs  sync-holidays.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: App.routing.test.tsx
src/components/: ConfirmModal.tsx  Logo.tsx
src/i18n/: config.ts  useTypedTranslation.ts
src/i18n/__tests__/: catalog-completeness.test.ts
src/lib/: i18n-errors.ts  mutations.ts  offline.ts  queries.ts  session.ts  supabase.ts  utils.ts
src/pages/: CoursesPage.tsx  ExportPage.tsx  HomePage.tsx  Login.tsx  LoginPage.tsx  OnboardingPage.tsx  PaymentsPage.tsx  SettingsPage.tsx  StatsPage.tsx  StudentDetailPage.tsx  StudentsPage.tsx
supabase/: seed.sql
supabase/migrations/: 20260711000001_initial_schema.sql  20260711000003_user_trigger.sql  20260711000004_course_duration.sql  20260711000005_level_duration.sql
(+4 files in other folders)
